// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`рендерит разрешённый эмбед soundcloud 1`] = `
<ForwardRef(SectionBlock)
  dangerouslySetInnerHTML={
    Object {
      "__html": "<iframe src=\\"https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/126190591&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true\\"/>",
    }
  }
/>
`;

exports[`рендерит разрешённый эмбед vk 1`] = `
<ForwardRef(SectionBlock)
  dangerouslySetInnerHTML={
    Object {
      "__html": "<div id=\\"vk_post_-48369111_67812\\"></div><script type=\\"text/javascript\\" src=\\"https://vk.com/js/api/openapi.js?169\\"></script><script type=\\"text/javascript\\">  (function() {    VK.Widgets.Post(\\"vk_post_-48369111_67812\\", -48369111, 67812, \\"lIIgVEQUDf4qOGfE_4NPIKFPQw\\");  }());</script>",
    }
  }
/>
`;

exports[`рендерит разрешённый эмбед yandexMapOnlyFrame 1`] = `
<ForwardRef(SectionBlock)
  dangerouslySetInnerHTML={
    Object {
      "__html": "<iframe src=\\"https://yandex.ru/map-widget/v1/?um=constructor%3Ae10144fb0aa7195369704c8c8d97de7b4a8aece262c86580b0275a1690f11d19&source=constructor\\"/>",
    }
  }
/>
`;

exports[`рендерит разрешённый эмбед yandexMapWithText 1`] = `
<ForwardRef(SectionBlock)
  dangerouslySetInnerHTML={
    Object {
      "__html": "<iframe src=\\"https://yandex.ru/map-widget/v1/-/CCUejHDqxC\\"/>",
    }
  }
/>
`;

exports[`рендерит разрешённый эмбед yandexMusic 1`] = `
<ForwardRef(SectionBlock)
  dangerouslySetInnerHTML={
    Object {
      "__html": "<iframe frameborder=\\"0\\" style=\\"border:none;width:100%;height:180px;\\" width=\\"100%\\" height=\\"180\\" src=\\"https://music.yandex.ru/iframe/#track/81019107/14745668\\">Слушайте <a href=\\"https://music.yandex.ru/album/14745668/track/81019107\\">Беспилотники: почему мы до сих пор на них не ездим, что этому мешает, когда они появятся на дорогах?</a> на Яндекс.Музыке</iframe>",
    }
  }
/>
`;
